--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,8 @@
-body {
+/* body {
   background: #e3e1ff;
   color: #444;
 }
+
 .container {
   width: 90%;
   max-width: 960px;
@@ -9,12 +10,24 @@ body {
   border-radius: 20px;
   box-shadow: 2px 4px 6px rgba(28, 6, 49, 0.1);
   background: white;
+} */
+p {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: #C5DDEB;
+  font: 14px/20px "Lato", Arial, sans-serif;
+  color: white;
+  margin: 0;
+  padding: 0;
 }
 .error {
   color: #ff3f80;
   font-size: 14px;
 }
-button {
+/* button {
   text-decoration: none;
   background: #5ae4ca;
   color: white;
@@ -22,4 +35,4 @@ button {
   border: 0;
   border-radius: 20px;
   padding: 10px 20px;
-}
+} */
