Welcome 디자인 업그레이드

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -19,8 +19,8 @@ p {
   padding: 0;
 }
 body {
-  background: #C5DDEB; 
-  /* background: #444753; */
+  /* background: #C5DDEB;  */
+  background: #19191a;
   font: 14px/20px "Lato", Arial, sans-serif;
   color: white;
   margin: 0;
